tests/programs/a1/local/invalid/final_fields.java
public class final_fields {
    public A() {}
    public final int x = 42;
}